--- a/sample.env
+++ b/sample.env
@@ -1,6 +1,6 @@
 API_ID = 26204980
 API_HASH = 9d8effed9ee64c269736a3ad1d437c9a
-BOT_TOKEN =
+BOT_TOKEN = 8114864164:AAHW3hD4diH8wNgHCqHqX1MNw-D4GHEJ65g
 LOG_GROUP_ID = -1002892990707
 MONGO_DB_URI = mongodb+srv://mrarya213612:hvidL8y8dcansVyi@arya.3p8uutx.mongodb.net/?retryWrites=true&w=majority
 OWNER_ID = 6014895515
